rewrite classes in info-room

--- a/src/blocks/panagination/panagination.pug
+++ b/src/blocks/panagination/panagination.pug
@@ -1,20 +1,26 @@
-div(class='content_detail__pagination cdp' actpage='1')
-    a(href='#!-1' class='cdp_i cdp_i_back')
-        i(class='material-icons') arrow_back
-    a(href='#!1' class='cdp_i') 1
-    a(href='#!2' class='cdp_i') 2
-    a(href='#!3' class='cdp_i') 3
-    a(href='#!4' class='cdp_i') 4
-    a(href='#!5' class='cdp_i') 5
-    a(href='#!6' class='cdp_i') 6
-    a(href='#!7' class='cdp_i') 7
-    a(href='#!8' class='cdp_i') 8
-    a(href='#!9' class='cdp_i') 9
-    a(href='#!10' class='cdp_i') 10
-    a(href='#!11' class='cdp_i') 11
-    a(href='#!12' class='cdp_i') 12
-    a(href='#!13' class='cdp_i') 13
-    a(href='#!14' class='cdp_i') 14
-    a(href='#!15' class='cdp_i') 15
-    a(href='#!+1' class='cdp_i forward') 
-        i(class='material-icons') arrow_forward
+mixin panagination(backButton, forwardButton)
+    div(class='content_detail__pagination cdp' actpage='1')
+        a(href='#!-1' class='cdp_i cdp_i_back')
+            i(class='material-icons')= backButton
+        each val in [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15]
+            a(href='#!'+ val class='cdp_i')= val
+        a(href='#!+1' class='cdp_i forward') 
+            i(class='material-icons')= forwardButton
+
+    //- arrow_back
+    //- arrow_forward
+    //- a(href='#!1' class='cdp_i') 1
+    //- a(href='#!2' class='cdp_i') 2
+    //- a(href='#!3' class='cdp_i') 3
+    //- a(href='#!4' class='cdp_i') 4
+    //- a(href='#!5' class='cdp_i') 5
+    //- a(href='#!6' class='cdp_i') 6
+    //- a(href='#!7' class='cdp_i') 7
+    //- a(href='#!8' class='cdp_i') 8
+    //- a(href='#!9' class='cdp_i') 9
+    //- a(href='#!10' class='cdp_i') 10
+    //- a(href='#!11' class='cdp_i') 11
+    //- a(href='#!12' class='cdp_i') 12
+    //- a(href='#!13' class='cdp_i') 13
+    //- a(href='#!14' class='cdp_i') 14
+    //- a(href='#!15' class='cdp_i') 15
