--- a/src/components/filter-page/filter-page.pug
+++ b/src/components/filter-page/filter-page.pug
@@ -12,4 +12,9 @@ html
       .header-btn-signup
         +button-signup('Зарегистрироватьcя', 'signup-page.html')
     include ../room-page/room-page.pug
-    +footer(['О нас', 'Новости', 'Служба поддержки', 'Услуги'], ['О сервисе', 'Наша команда', 'Вакансии', 'Инвесторы'], ['Соглашения', 'Сообщества', 'Связь с нами'] )
+    +footer({name1: 'навигация', name2: 'о нас', name3: 'Служба поддержки', name4: 'Подписка'}, ['О нас', 'Новости', 'Служба поддержки', 'Услуги'], ['О сервисе', 'Наша команда', 'Вакансии', 'Инвесторы'], ['Соглашения', 'Сообщества', 'Связь с нами'], 'Copyright © 2018 Toxin отель. Все права зачищены.')
+
+
+
+
+
