--- a/src/components/search-page/search-page.pug
+++ b/src/components/search-page/search-page.pug
@@ -16,4 +16,4 @@ html
       p(class='slogan' style='white-space:pre;') 
         |Лучшие номера для вашей работы, 
         |  отдыха и просто вдохновения
-    +footer(['О нас', 'Новости', 'Служба поддержки', 'Услуги'], ['О сервисе', 'Наша команда', 'Вакансии', 'Инвесторы'], ['Соглашения', 'Сообщества', 'Связь с нами'] )
+    +footer({name1: 'навигация', name2: 'о нас', name3: 'Служба поддержки', name4: 'Подписка'}, ['О нас', 'Новости', 'Служба поддержки', 'Услуги'], ['О сервисе', 'Наша команда', 'Вакансии', 'Инвесторы'], ['Соглашения', 'Сообщества', 'Связь с нами'], 'Copyright © 2018 Toxin отель. Все права зачищены.')
