--- a/src/components/info-page/info-page.pug
+++ b/src/components/info-page/info-page.pug
@@ -14,4 +14,4 @@ html
     .clear
     br
     include ../info-room/info-room.pug
-    +footer(['О нас', 'Новости', 'Служба поддержки', 'Услуги'], ['О сервисе', 'Наша команда', 'Вакансии', 'Инвесторы'], ['Соглашения', 'Сообщества', 'Связь с нами'] )
+    +footer({name1: 'навигация', name2: 'о нас', name3: 'Служба поддержки', name4: 'Подписка'}, ['О нас', 'Новости', 'Служба поддержки', 'Услуги'], ['О сервисе', 'Наша команда', 'Вакансии', 'Инвесторы'], ['Соглашения', 'Сообщества', 'Связь с нами'], 'Copyright © 2018 Toxin отель. Все права зачищены.')
