--- a/src/components/info-room/info-room.pug
+++ b/src/components/info-room/info-room.pug
@@ -6,45 +6,42 @@ include ../../blocks/calculator/calculator.pug
 
 
 div(class='information')
-    div(class='information-top-part')
-        div(class='gallery-top--responsive')
+    div(class='information__top-part information__gallery')
+        div(class='gallery__big-img_responsive')
             img(src=require('./images/mainA-resp.jpg'))
-        div(class='gallery-top')
+        div(class='gallery__big-img')
             img(src=require('./images/mainA.jpg'))
-        div(class='gallery-bottom')
-            div(class='gallery-bottom--first')
+        div(class='gallery__small-img')
+            div(class='gallery__small-img_first')
                 img(src=require('./images/gallery-first.jpg'))
-            div(class='gallery-bottom--second')
+            div(class='gallery__small-img_second')
                 img(src=require('./images/gallery-second.jpg'))
-    div(class='information-bottom-part row' class='container flex-row')
-        div(class='bottom-part--left')
-            div(class='row room-information--info')
-                .blocks
-                    h3(class='information-title information-title--info') Сведения о номере
+    div(class=' container flex-row information__bottom-part')
+        div(class='information__bottom-part bottom-part__left')
+            div(class='information__info')
+                div
+                    h3(class='information__title information__title_info') Сведения о номере
                     +room-information('mood', 'Комфорт', 'Шумопоглощающие стены', ' information__border') 
                     +room-information('location_city', 'Удобство', 'Окно в каждой из спален', ' information__border')
                     +room-information('whatshot', 'Уют', 'Номер оснащён камином')
-                .blocks.information-impression
-                    h3(class='information-title information-title--impression') Впечатления от номера
+                div(class='information__impression')
+                    h3(class='information__title information__title_impression') Впечатления от номера
                     +chart-donut('260', 'Великолепно', 'Хорошо', 'Удовлетворительно', 'Разочарован')
-            .blocks 
-                h3(class='information-title information-title--details') Отзывы посетителей номера
+            div
+                h3(class='information__title information__title_details') Отзывы посетителей номера
                 +feedback(require('./images/photo1.jpg'), 'Мурад Сарафанов', '5 дней назад', 'Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.')
-                div(class='information-impression--second')
+                div(class='information__impression_second')
                     +feedback(require('./images/photo2.jpg'), 'Патрисия Стёклышкова', 'Неделю назад', 'Обслуживание на высоте! Всё аккуратно, чисто. Завтраки в номер советую заказать, каждый день новое блюдо и десерт как комплимент')
             div(class='flex-row')
-                .blocks.information-rules
-                    h3(class='information-title information-title--rules') Правила
+                div(class='information__rules')
+                    h3(class='information__title information__title_rules') Правила
                     +bullet-list(['Нельзя с питомцами', 'Без вечеринок и мероприятий', 'Время прибытия — после 13:00' + ', '   +  ' а выезд до 12:00 '])
-                .blocks.information-cancel
-                    h3(class='information-title information-title--cancel') Отмена
-                    p(style='white-space:pre;' class='information-text')
+                div(class='information__cancel')
+                    h3(class='information__title information__title_cancel') Отмена
+                    p(style='white-space:pre;' class='information__text')
                         | Бесплатная отмена в течение 48 ч. После
                         | этого при отмене не позднее чем за 5 дн. до 
                         | прибытия вы получите полный возврат за 
                         | вычетом сбора за услуги.
-        div(class='bottom-part__right')
+        div(class='information__bottom-part bottom-part__right')
             +calculator(888, '9 990₽', 'в сутки', 'прибытие', 'выезд', 'гости', '9 990₽ х 4 суток', '39 960₽', 'Сбор за услуги: скидка 2 179₽', '300₽', 'Итого..................................................38 081₽')
-
-
-calculator(roomNumber, pricePerDay, day, checkin, checkout, titleDropdown, calculationOfThePrice, fullPrice, tax, additionalTax, totalPrice )
