--- a/src/components/signup-page/signup-page.pug
+++ b/src/components/signup-page/signup-page.pug
@@ -4,7 +4,7 @@ include ../footer/footer.pug
 doctype html
 html
   head
-    title my jade template
+    title
     meta(name="viewport", content="width=, initial-scale=1.0")
   body
     +header(['О нас', 'Услуги', 'Вакансии', 'Новости', 'Соглашения'])
@@ -14,4 +14,4 @@ html
     .clear
     .sugnup-background
       +form-register( 'Регистрация аккаунта',  'дата рождения', 'данные для входа в сервис', 'Получать спецпредложения', 'Уже есть аккаунт на Toxin')
-    +footer(['О нас', 'Новости', 'Служба поддержки', 'Услуги'], ['О сервисе', 'Наша команда', 'Вакансии', 'Инвесторы'], ['Соглашения', 'Сообщества', 'Связь с нами'] )
+    +footer({name1: 'навигация', name2: 'о нас', name3: 'Служба поддержки', name4: 'Подписка'}, ['О нас', 'Новости', 'Служба поддержки', 'Услуги'], ['О сервисе', 'Наша команда', 'Вакансии', 'Инвесторы'], ['Соглашения', 'Сообщества', 'Связь с нами'], 'Copyright © 2018 Toxin отель. Все права зачищены.')
