--- a/src/blocks/calculator/calculator.scss
+++ b/src/blocks/calculator/calculator.scss
@@ -24,7 +24,7 @@
   margin-top: 45px;
 }
 
-.calculator__count__info {
+.count__info {
   font-style: normal;
   font-weight: bold;
   font-size: 20px;
@@ -38,7 +38,7 @@
   margin-left: 1vw;
 }
 
-.calculator__count__info_extra {
+.count__info_extra {
   margin-left: 2.6vw;
 }
 
@@ -68,7 +68,7 @@
   margin-top: 25px;
 }
 
-.calculator__count__price {
+.count__price {
   margin-top: 35px;
 }
 
