--- a/src/blocks/description-checkbox/description-checkbox.scss
+++ b/src/blocks/description-checkbox/description-checkbox.scss
@@ -1,15 +1,15 @@
-.checkbox__name__descr {
+.checkbox__name_descr {
   font-weight: bold;
   letter-spacing: 0.9px;
   margin-top: -3px;
 }
 
-.checkbox__name__descr {
+.checkbox__name_descr {
   font-size: 1rem;
   letter-spacing: 1.2px;
 }
 
-.checkbox__span__descr {
+.checkbox__span_descr {
   display: block;
   font-style: normal;
   font-weight: normal;
