--- a/src/blocks/pagination/pagination.pug
+++ b/src/blocks/pagination/pagination.pug
@@ -1,4 +1,4 @@
-mixin panagination(backButton, forwardButton)
+mixin pagination(backButton, forwardButton)
     div(class='content_detail__pagination cdp' actpage='1')
         a(href='#!-1' class='cdp_i cdp_i_back')
             i(class='material-icons')= backButton
