--- a/src/blocks/checkbox/checkbox.pug
+++ b/src/blocks/checkbox/checkbox.pug
@@ -1,4 +1,4 @@
 mixin checkbox(name, label, nameClass)
   div(class='checkbox__button' class=nameClass)
-    input(type='checkbox' class='checkbox__button checkbox__box' id= name name= name value= name)
-    label(class='checkbox__button checkbox__name' for= name)= label
+    input(type='checkbox' class='checkbox__box' id= name name= name value= name)
+    label(class='checkbox__name' for= name)= label
