--- a/src/blocks/description-checkbox/description-checkbox.pug
+++ b/src/blocks/description-checkbox/description-checkbox.pug
@@ -1,5 +1,6 @@
 mixin description-checkbox(name, label, descr)
-  div(class='checkbox__button checkbox__button__descr')
-    input(type='checkbox' class='checkbox__button__descr checkbox__descr__box checkbox__box' id= name name= name value= name)
-    label(for= name class='checkbox__button__descr checkbox__name checkbox__name__descr')= label
-    span(class='checkbox__button__descr checkbox__span__descr')= descr
+  div(class='checkbox__button checkbox__button_descr')
+    input(type='checkbox' class='checkbox__box' id= name name= name value= name)
+    label(for= name class='checkbox__name checkbox__name_descr')= label
+    span(class='checkbox__span_descr')= descr
+
