--- a/src/components/info-room/info-room.pug
+++ b/src/components/info-room/info-room.pug
@@ -3,7 +3,7 @@ include ../../blocks/feedback/feedback.pug
 include ../../blocks/bullet-list/bullet-list.pug
 include ../../blocks/donut-chart/donut-chart.pug
 include ../../blocks/calculator/calculator.pug
-
+include ../../blocks/dropdown/dropdown.pug
 
 div(class='information')
     div(class='information__top-part information__gallery')
@@ -45,3 +45,6 @@ div(class='information')
                         | вычетом сбора за услуги.
         div(class='information__bottom-part bottom-part__right')
             +calculator(888, '9 990₽', 'в сутки', 'прибытие', 'выезд', 'гости', '9 990₽ х 4 суток', '39 960₽', 'Сбор за услуги: скидка 2 179₽', '300₽', 'Итого..................................................38 081₽')
+                block datepicker
+                    h1 My important announcement
+                    //- +dropdown( {id: 'dd-text', name: 'Сколько гостей'}, { name:'Взрослые', number: 'adult_text', plus: 'adult_plus', minus: 'adult_minus'},  {name: 'Дети', number: 'child_text', plus: 'child_plus', minus: 'child_minus' }, {name: 'Младенцы', number: 'baby_text', plus: 'baby_plus', minus: 'baby_minus'})
